Import of DMAKI/Atomik-0.00001_02 from CPAN.
gitpan-cpan-distribution: Atomik
gitpan-cpan-version:      0.00001_02
gitpan-cpan-path:         DMAKI/Atomik-0.00001_02.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes
 =======
 
-0.00001 - 05 Aug 2008
-  - Initial release
+0.00001_02 - 11 Aug 2008
+  * Depend on MooseX::DOM for xml access, therefore reducing the number of
+    modules in this distro significantly
+
+0.00001_01 - 05 Aug 2008
+  * Initial release
